--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vitest": "^0.31.1"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "express": "^4.18.2",
     "tsx": "^3.12.7"
   }
 }
