--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vitest": "^0.31.1"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "tsx": "^3.12.7"
