--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest DeleteProductUseCase.test.ts",
+    "test": "vitest",
     "dev": "tsx src/server.ts"
   },
   "repository": {
